--- a/WebUI/wwwroot/css/site.css
+++ b/WebUI/wwwroot/css/site.css
@@ -1,22 +1,262 @@
 html {
-  font-size: 14px;
+    font-size: 14px;
 }
 
 @media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+    html {
+        font-size: 16px;
+    }
 }
 
 .btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
-  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
+    box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
 }
 
 html {
-  position: relative;
-  min-height: 100%;
+    position: relative;
+    min-height: 100%;
 }
 
 body {
-  margin-bottom: 60px;
+    margin-bottom: 60px;
 }
+
+.vertical-line {
+    width: 1px;
+    height: 32px;
+    background-color: #ddd;
+    margin: 0 8px;
+}
+
+.product-container {
+    height: 100%;
+}
+
+.product-image {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
+
+.product-image-container {
+    height: 350px; /* Adjust the desired height */
+    overflow: hidden;
+}
+
+.product-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.product-name {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.order-container {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 16px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    background-color: #fff;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    margin-bottom: 10px;
+}
+
+.order-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 0px;
+}
+
+.order-title {
+    font-size: 12px;
+    font-weight: bold;
+    margin-bottom: 0;
+}
+
+.order-status {
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.order-item-image {
+    max-width: 120px;
+    max-height: 120px;
+}
+
+.order-date {
+    margin-right: 8px;
+}
+
+.order-id {
+    margin: 0;
+}
+
+.order-date-id {
+    display: flex;
+    flex-direction: column;
+}
+
+.order-details {
+    display: flex;
+    align-items: center;
+    font-size: 12px;
+}
+
+.order-item-details {
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+}
+
+.order-details p {
+    margin-bottom: 0px;
+}
+
+.order-item-price {
+    display: flex;
+    margin-bottom: 0px;
+}
+
+.buttons-container {
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 0px;
+}
+
+    .buttons-container button {
+        margin-left: 8px;
+    }
+
+.black-and-white {
+    filter: grayscale(100%);
+}
+
+.stock-label {
+    font-size: 12px;
+    font-weight: bold;
+    padding: 0px 0px;
+    border-radius: 0px;
+}
+
+.stock-label-in {
+    //background-color: #3CB371;
+    color: #3CB371;
+}
+
+.stock-label-out {
+    //background-color: #FF4500;
+    color: #FF5722;
+}
+
+.discount-box {
+    position: absolute;
+    top: 8px;
+    left: 8px;
+    padding: 4px 6px;
+    background-color: #FF5722;
+    color: #fff;
+    font-size: 12px;
+    font-weight: bold;
+    border-radius: 4px;
+}
+
+.price-wrapper {
+    /* Existing styles... */
+    //flex-direction: row; /* Change flex-direction to row */
+    display: flex;
+    align-items: baseline; /* Align items at the baseline */
+}
+
+.old-price {
+    font-size: 12px;
+    color: #999;
+    text-decoration: line-through;
+    margin-right: 8px;
+}
+
+.new-price {
+    font-size: 16px;
+    color: #FF5722;
+    font-weight: bold;
+    margin-right: 8px;
+}
+
+.sold-rating-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: px;
+}
+
+.sold-items {
+    font-size: 12px;
+    color: #999;
+}
+
+.rating {
+    font-size: 12px;
+    color: #999;
+    margin-left: 4px;
+}
+
+.product-name {
+    font-size: 12px;
+    margin-bottom: 8px;
+}
+
+.free-shipping {
+    font-size: 12px;
+    color: #3CB371;
+}
+
+
+// Quantity spin box
+.quantity-spinner {
+    display: flex;
+    align-items: center;
+    width: 120px;
+    height: 32px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    overflow: hidden;
+}
+
+.quantity-spinner button {
+    width: 32px;
+    height: 100%;
+    background-color: #f5f5f5;
+    border: none;
+    cursor: pointer;
+}
+
+    .quantity-spinner button i {
+        font-size: 12px;
+        color: #555;
+    }
+
+.quantity-spinner input {
+    flex-grow: 1;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    border: none;
+    background-color: transparent;
+    font-size: 14px;
+    color: #555;
+}
+
+    .quantity-spinner input::-webkit-inner-spin-button,
+    .quantity-spinner input::-webkit-outer-spin-button {
+        -webkit-appearance: none;
+        margin: 0;
+    }
+
+    .quantity-spinner input:focus {
+        outline: none;
+    }
