Store authn refresh token in cookies. Make sure to try to authenticate from refresh token when user first opens the page.

--- a/WebUI/Pages/_LoginPartial.cshtml
+++ b/WebUI/Pages/_LoginPartial.cshtml
@@ -1,8 +1,11 @@
 @using WebUI.Services;
 @inject IAuthService AuthService;
+@inject Microsoft.AspNetCore.Http.IHttpContextAccessor HttpContextAccessor;
 
 @{
     var user = await AuthService.GetUser();
+    if (user == null)
+        user = await AuthService.TryLoginWithCookies(HttpContextAccessor.HttpContext);
 }
 @if (user != null)
 {
