Encapsulate cookies authn in separate extension method that uses IAuthService.

--- a/WebUI/Pages/_LoginPartial.cshtml
+++ b/WebUI/Pages/_LoginPartial.cshtml
@@ -1,3 +1,4 @@
+@using WebUI.Authentication
 @using WebUI.Services;
 @inject IAuthService AuthService;
 @inject Microsoft.AspNetCore.Http.IHttpContextAccessor HttpContextAccessor;
@@ -5,7 +6,7 @@
 @{
     var user = await AuthService.GetUser();
     if (user == null)
-        user = await AuthService.TryLoginWithCookies(HttpContextAccessor.HttpContext);
+        user = await HttpContextAccessor.HttpContext.TryLoginWithCookies(AuthService);
 }
 @if (user != null)
 {
